--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "localforage": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.11.0",
         "react-scripts": "5.0.1",
         "swr": "^2.2.4",
         "typescript": "*",
