--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
         "jsx": "preserve",
         "incremental": true
     },
-    "include": ["**/*.ts", "**/*.tsx"],
+    "include": ["**/*.ts", "**/*.tsx", "src/components/Details"],
     "exclude": ["node_modules"]
 }
